Adjust jvmargs for UnitTest